--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Etch-A-Sketch by Phil Brandvold</title>
@@ -7,6 +7,6 @@
 <body>
   <div id="gridContainer">
   </div>
-  
+
   <script src="./main.js"></script>
 </body>
