Create header and sidebard sections.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <link rel="stylesheet" href="./style.css"></link>
 </head>
 <body>
+  <header id="header">
+
+  </header>
+
+  <div id="sidebar">
+  </div>
+
   <div id="gridContainer">
   </div>
 
