Layout grid to show header, sidebar, and canvas. Rename gridContainer to canvas.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <link rel="stylesheet" href="./style.css"></link>
 </head>
 <body>
-  <header id="header">
+  <div id="main">
+    <header id="header">
 
-  </header>
+    </header>
 
-  <div id="sidebar">
-  </div>
+    <div id="sidebar">
+    </div>
 
-  <div id="gridContainer">
+    <div id="canvas">
+    </div>
   </div>
 
   <script src="./main.js"></script>
