--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
   <div id="main">
     <header id="header">
-
+      <h1>Etch Your Sketch!</h1>
     </header>
-
-    <div id="sidebar">
+    <div id="newGrid">
+      <button class="button">New Grid</button>
     </div>
 
     <div id="canvas">
