Change button text for creating a new canvas. Change initial grid to 25 X 25.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Etch Your Sketch!</h1>
     </header>
     <div id="newGrid">
-      <button class="button">New Grid</button>
+      <button class="button">New Canvas</button>
     </div>
 
     <div id="canvas">
