Add text to show current cells in grid. Change CSS for header to remove uncessary specificity.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <div id="main">
     <header id="header">
       <h1>Etch Your Sketch!</h1>
+      <p>Current Cells in Grid: 625</p>
     </header>
     <div id="newGrid">
       <button class="button">New Canvas</button>
